# AliceBlue-MCP-Server

./: .gitignore  .smithery.yaml  Dockerfile  README.md  TESTDockerfile  main.py  pyproject.toml  requirements.txt  run_playground.sh  server (1).py  server.py  smithery.json  smithery.yaml
.github/workflows/: deploy.yml
src/aliceblue_server/: server.py
