[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aliceblue-mcp"
version = "0.1.0"
description = "AliceBlue Trading MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0", 
    "smithery>=0.1.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
aliceblue-mcp = "aliceblue_server.server:create_server"

[tool.smithery]
server = "aliceblue_server.server:create_server"